# rustyshim

./: Cargo.toml  README.md  build.rs  wrapper.h
examples/: config.yaml  pyarrow_auth_handler.py  rarrow_auth_handler.R  rustyshim_client.R  rustyshim_client.py
include/: client.h
src/: client.cpp  client.h  flight.rs  lib.rs  main.rs  scidb.rs
