[package]
name = "rustyshim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"
bindgen = "0.53.1"

[dependencies]
arrow = { version = "36.0.0", features = ["prettyprint"] }
tempfile = "3.4.0"
datafusion = "22"
tokio = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
