[package]
name = "rustyshim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"
bindgen = "0.53.1"

[dependencies]
bytes = { version = "1.4.0" }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = "1.0"
tonic = { version = "0.8.3", default-features = false, features = ["transport", "codegen", "prost"] }
tempfile = "3.4.0"
datafusion-common = "22"
datafusion = "22"
arrow-flight = { version = "36.0.0" }
arrow-ipc = { version = "36.0.0" }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
rand = { version = "0.8.5" }
